--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,21 @@
           margin-top: 5%;
     
         }
+        .submit{
+          background: #777 none repeat scroll 0 0;
+          border: 0;
+          color: #fff;
+          cursor: pointer;
+          display: inline-block;
+          font-size: 1.55rem;
+          padding: 0.825rem 1rem;
+          text-align: center;
+          transition: all 0.20s linear 0s;
+          -o-transition: all 0.20s linear 0s;
+          -ms-transition: all 0.20s linear 0s;
+          -moz-transition: all 0.20s linear 0s;
+          -webkit-transition: all 0.20s linear 0s;
+         }
     </style>
     </head>
   <header>
