--- a/app/app-content/css/components.css
+++ b/app/app-content/css/components.css
@@ -149,7 +149,7 @@ a.tooltip-content.tooltip-bottom,.tooltip-content.tooltip-bottom {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-size: 0.85rem;
+  font-size: 1.55rem;.
   padding: 0.825rem 1rem;
   text-align: center;
   transition: all 0.20s linear 0s;
