--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
                    <input type="password" name="password" id="password" class="form-control" />
                </div>
                <div class="form-group">
-                   <button type="submit" class="button">Login</button>
+                   <button type="submit" class="submit" id="login">Login</button>
                    <a href="/register" class="button">Register</a>
                </div>
            </form>
@@ -35,5 +35,4 @@
               </div>
            </div>
         </div>
-     <%- include('partials/footer') %>
 
