--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,8 +30,8 @@
                                 <input type="password" name="password" id="password" class="form-control" required />
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Register</button>
-                                <a href="/login" class="btn btn-link">Cancel</a>
+                                <button type="submit" class="submit">Register</button>
+                                <a href="/login" class="btn btn-link">Login</a>
                             </div>
                         </form>
                     </div>
@@ -39,5 +39,4 @@
               </div>
            </div>
         </div>
-<%- include('partials/footer') %>
     
