--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,11 +14,11 @@
                         <% } %>
                         <form method="post">
                             <div class="form-group">
-                                <label for="firstName">First name</label>
+                                <label for="firstName">Name</label>
                                 <input type="text" name="firstName" id="firstName" class="form-control" value="<%= locals.firstName || '' %>" required />
                             </div>
                             <div class="form-group">
-                                <label for="lastName">Last name</label>
+                                <label for="lastName">Surname</label>
                                 <input type="text" name="lastName" id="lastName" class="form-control" value="<%= locals.lastName || '' %>" required />
                             </div>
                             <div class="form-group">
